tests/models/snapshots/can_create@classes.snap
---
source: tests/models/classes.rs
assertion_line: 61
expression: "(class.title, class.instructor, class.capacity)"
---
(
    "Vinyasa Flow",
    "Mei",
    20,
)
