tests/models/snapshots/can_create@organizations.snap
---
source: tests/models/organizations.rs
assertion_line: 36
expression: "(organization.name, organization.timezone)"
---
(
    "Sunrise Yoga",
    "Asia/Taipei",
)
