tests/models/snapshots/can_find_by_id@organizations.snap
---
source: tests/models/organizations.rs
assertion_line: 82
expression: "found.map(|org| (org.name, org.timezone))"
---
Some(
    (
        "Moonlight Yoga",
        "Asia/Tokyo",
    ),
)
