tests/models/snapshots/can_validate_model@organizations.snap
---
source: tests/models/organizations.rs
assertion_line: 56
expression: res
---
Err(
    Custom(
        "{\"name\":[{\"code\":\"length\",\"message\":\"Name must be at least 2 characters long.\"}],\"timezone\":[{\"code\":\"length\",\"message\":\"Timezone must be present.\"}]}",
    ),
)
